fix: reduce gap in patreon stars layout

--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -5,7 +5,6 @@
 .l-column {
   display: flex;
   flex-direction: column;
-  flex: 1;
 }
 
 .l-center {
